--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,7 +23,11 @@ html {
  }
 
 body, html {
-    background-color: black;
+    background-image: linear-gradient(to bottom, black, rgb(12, 0, 19),rgb(29, 0, 41));
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 header {
@@ -91,9 +95,9 @@ article > ul > li > a {
     text-align: center;
     background-color: whitesmoke;
     color: black;
-    border: 2px solid rgb(61, 61, 61);
+    border: 2px solid rgb(31, 31, 31);
     border-radius: 40px;
-    box-shadow: 7px 5px 0px rgb(61, 61, 61);
+    box-shadow: 7px 5px 0px rgb(31, 31, 31);
 }
 
 
