--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,7 +23,7 @@ html {
  }
 
 body, html {
-    background-color: black;
+    background-image: linear-gradient(to bottom, black, rgb(15, 15, 15));
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
